--- a/packages/providers/package.json
+++ b/packages/providers/package.json
@@ -93,7 +93,7 @@
     "typedoc": "^0.24.0",
     "typescript": "5.6.2",
     "uuid": "^9.0.0",
-    "vitest": "^2.0.5"
+    "vitest": "2.0.5"
   },
   "nx": {
     "tags": [
